--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -13,6 +13,9 @@
     <div class="container-schedule">
         <div class="schedule">
             <div class="title">
+                <span class="material-icons transportation-icon">
+                    directions_bus
+                </span>
                 Bus 54 <p style="font-size: 50%;">(Latest update: {{busTimes?.latestUpdate}})</p>
             </div>
             <div>
@@ -22,6 +25,9 @@
         </div>
         <div class="schedule">
             <div class="title">
+                <span class="material-icons transportation-icon">
+                    directions_subway
+                </span>
                 Gärdet Line 13 <p>(Latest update: {{metroTimes?.latestUpdate}})</p>
             </div>
             <div>
