--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -1,3 +1,4 @@
+<div id="background" [ngStyle]="{'background-image': this.getBackground()}"></div>
 <div class="container">
     <div class="container-error">
         {{this.errorMessage}}
@@ -16,7 +17,7 @@
                 <span class="material-icons transportation-icon">
                     directions_bus
                 </span>
-                Bus 54 <p style="font-size: 50%;">(Latest update: {{busTimes?.latestUpdate}})</p>
+                Tessinparken Linje 54 <p style="font-size: 50%;">(Latest update: {{busTimes?.latestUpdate}})</p>
             </div>
             <div>
                 <div class="board-times" [innerHTML]=busTimes?.boardTime>
@@ -28,7 +29,7 @@
                 <span class="material-icons transportation-icon">
                     directions_subway
                 </span>
-                Gärdet Line 13 <p>(Latest update: {{metroTimes?.latestUpdate}})</p>
+                Gärdet Linje 13 <p>(Latest update: {{metroTimes?.latestUpdate}})</p>
             </div>
             <div>
                 <div class="board-times" [innerHTML]=metroTimes?.boardTime>
