--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -45,7 +45,7 @@
                     {{w.time}}
                 </div>
                 <div>
-                    <img style="width: 50px; height: 50px" [src]="getImageByCode(w.icon)" alt="">
+                    <img style="width: 50px; height: 50px" [src]="getImageByCode(w.icon)">
                 </div>
                 <div>
                     {{w.temperature}}
