Added mockdata as well as cleaning up template

--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -17,7 +17,8 @@
                 <span class="material-icons transportation-icon">
                     directions_bus
                 </span>
-                Tessinparken Linje 54 <p style="font-size: 50%;">(Latest update: {{busTimes?.latestUpdate}})</p>
+                Tessinparken Linje 54 <p>(Latest update: {{busTimes?.latestUpdate}})
+                </p>
             </div>
             <div>
                 <div class="board-times" [innerHTML]=busTimes?.boardTime>
