--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -40,7 +40,7 @@
     </div>
     <div id="quote">
         {{this.quote?.quoteStr}}
-        <p id="quote-author">- {{this.quote?.author}}</p>
+        <p id="quote-author">– {{this.quote?.author}}</p>
     </div>
     <div class="container-weather">
         <div id="weather-list">
