--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -1,4 +1,9 @@
-<div id="background" [ngStyle]="{'background-image': this.getBackground()}"></div>
+<div class="background top" [ngStyle]="{'background-image': this.getBackgroundTop()}"
+    [ngClass]="{  'hide' : showFirst}">
+</div>
+<div class="background bottom" [ngStyle]="{'background-image': this.getBackgroundBottom() }">
+</div>
+
 <div class="container">
     <div class="container-error" [ngStyle]="{'color': this.errorSlObj.color}">
         {{ this.errorSlObj.message }}
