--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -53,18 +53,35 @@
         <p id="quote-author">– {{this.quote?.author}}</p>
     </div>
     <div class="container-weather">
+        <div id="sun-times" *ngIf="sunTime">
+            <div>
+                {{sunTime.sunrise.time}}
+            </div>
+            <div>
+                <img style="width: 50px; height: 50px" [src]="sunImages.sunrise">
+            </div>
+            <div>
+                {{sunTime.sunset.time}}
+            </div>
+            <div>
+                <img style="width: 50px; height: 50px" [src]="sunImages.sunset">
+            </div>
+        </div>
         <div id="weather-list">
             <div class="weather-list-item" *ngFor="let w of weatherInfo">
                 <div>
                     {{w.time}}
                 </div>
                 <div>
-                    <img style="width: 50px; height: 50px" [src]="getImageByCode(w.icon)">
+                    <img style="width: 50px; height: 50px" [src]="getImageByCode(w.icon, weatherApp)">
                 </div>
                 <div>
                     {{w.temperature}}
                 </div>
             </div>
+        </div>
+        <div id="sun-times">
+
         </div>
     </div>
 </div>
