--- a/src/app/main-page/sl-info/sl-info.component.css
+++ b/src/app/main-page/sl-info/sl-info.component.css
@@ -167,8 +167,8 @@
     display: flex;
     flex-direction: column;
     width: 25%;
-    font-size: 90%;
-    padding: 20px;
+    font-size: 95%;
+    padding: 0 20px;
 }
 
 .weather-day-item {
