--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        <div id="weather-week-list">
+        <div id="weather-week-list" class="flex-end">
             <div class="weather-day-item" *ngFor="let weatherDay of weatherDaily">
                 <div>
                     {{weatherDay.day}}
