background wallpaper component

--- a/src/app/main-page/sl-info/sl-info.component.html
+++ b/src/app/main-page/sl-info/sl-info.component.html
@@ -1,8 +1,4 @@
-<div class="background top" [ngStyle]="{'background-image': this.getBackgroundTop()}"
-    [ngClass]="{  'hide' : showFirst}">
-</div>
-<div class="background bottom" [ngStyle]="{'background-image': this.getBackgroundBottom() }">
-</div>
+<app-background-wallpaper></app-background-wallpaper>
 
 <div class="container">
     <div class="container-error" [ngStyle]="{'color': this.errorSlObj.color}">
