--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,21 @@
 html {
-    /* background-color: #25241f;
+  /* background-color: #25241f;
     background-image: linear-gradient(rgba(77, 74, 76, 0.6), rgba(0, 0, 0, 0.3)),
     /* url("https://images5.alphacoders.com/601/601884.jpg"); */
-      /* url("https://images.alphacoders.com/485/485910.jpg"); */
-      /*https://images.alphacoders.com/485/485910.jpg ;*/
-    /* height: 100vh;
+  /* url("https://images.alphacoders.com/485/485910.jpg"); */
+  /*https://images.alphacoders.com/485/485910.jpg ;*/
+  /* height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
-    background-attachment: fixed; */ 
-    color: whitesmoke;
-    font-size: 150%;
-    font-family: "Oxygen", "sans-serif" !important;
-    overflow: hidden;
-  }
+    background-attachment: fixed; */
+  color: whitesmoke;
+  font-size: 150%;
+  font-family: "Oxygen", "sans-serif" !important;
+  overflow: hidden;
+}
 
-span{
+span {
   font-size: 60%;
 }
 
@@ -25,4 +25,8 @@ li {
 
 ul {
   margin-top: 0;
+}
+
+.flex-end {
+  align-self: flex-end;
 }
