--- a/src/app/components/sl-schedule/sl-schedule.component.html
+++ b/src/app/components/sl-schedule/sl-schedule.component.html
@@ -1,4 +1,4 @@
-<div class="container-schedule" *ngIf="transportationTimes$ | async as transportationTimes">
+<div class="main" *ngIf="transportationTimes$ | async as transportationTimes">
     <div class="schedule">
         <div class="title">
             <span class="material-icons transportation-icon">
