--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -1,4 +1,4 @@
-<div class="container-weather">
+<div class="main">
     <div id="sun-times" class="flex-end" *ngIf="sunTimes$ | async as sunTimes">
         <div>
             {{sunTimes.sunrise.time}}
