--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,20 @@
 .container {
     display: flex;
     flex-direction: column;
-    height: 95vh;
     padding: 10px;
+    height: 95%;
 }
 
 .container-error {
     font-weight: bold;
     font-size: 24px;
     text-align: right;
+}
+
+.container-schedule {
+    text-align: center;
+}
+
+.container-weather {
+    margin-top: auto;
 }
