--- a/src/app/components/date-time/date-time.component.css
+++ b/src/app/components/date-time/date-time.component.css
@@ -1,13 +1,10 @@
+.main {
+    text-align: center;
+}
+
 #clock-now {
     font-family: arial, helvetica, sans-serif;
     font-weight: normal;
     font-size: 95px;
     margin: 0px;
-}
-
-.container-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
