--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <app-background-wallpaper></app-background-wallpaper>
 
 <div class="container">
-    <div class="container-error" [ngStyle]="{'color': this.errorSlObj.color}">
-        {{ this.errorSlObj.message }}
-    </div>
+    <ng-container *ngIf="errorSl$ | async as errorSl">
+        <div class="container-error" [ngStyle]="{'color': errorSl.color}">
+            {{ errorSl.message }}
+        </div>
+    </ng-container>
     <ng-container *ngIf="errorWeather$ | async as errorWeather">
         <div class="container-error" [ngStyle]="{'color': errorWeather.color}">
             {{ errorWeather.message }}
@@ -15,7 +17,7 @@
     </div>
 
     <div class="container-schedule">
-        <app-sl-schedule></app-sl-schedule>
+        <app-sl-schedule (onSlError)="onSlError($event)"></app-sl-schedule>
     </div>
 
     <div class="container-quote">
