--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -19,7 +19,7 @@
                 {{w.time}}
             </div>
             <div>
-                <img style="width: 50px; height: 50px" [src]="getImageByCode(w.icon, weatherApp)">
+                <img style="width: 50px; height: 50px" [src]="getImageByCode(w.icon)">
             </div>
             <div>
                 {{w.temperature}}
@@ -41,7 +41,7 @@
                 {{weatherDay.min}}
             </div>
             <div>
-                <img style="width: 40px; height: 40px" [src]="getImageByCode(weatherDay.icon, weatherApp)">
+                <img style="width: 40px; height: 40px" [src]="getImageByCode(weatherDay.icon)">
             </div>
         </div>
 
